@@ -1,47 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom" xmlns:dc="http://purl.org/dc/elements/1.1/">
- <title type="html">www.magix-cms.dev</title>
- <link href="http://www.magix-cms.dev/news_fr_rss.xml" rel="alternate" type="application/atom+xml"/>
- <updated>2014-04-02T01:22:29+02:00</updated>
- <id>http://www.magix-cms.dev</id>
- <generator uri="http://magix-cjquery.com">Generated by magix cjQuery Framework</generator>
- <entry>
-  <title>autre news</title>
-  <link rel="alternate" type="text/html" href="http://www.magix-cms.dev/fr/actualites/2014/04/02/autre-news/HmYeRyxhJNhAnTPddBAb/" title="http://www.magix-cms.dev/fr/actualites/2014/04/02/autre-news/HmYeRyxhJNhAnTPddBAb/"/>
-  <update>2014-04-02T01:22:13+02:00</update>
-  <id>http://www.magix-cms.dev/fr/actualites/2014/04/02/autre-news/HmYeRyxhJNhAnTPddBAb/</id>
-  <summary type="html">&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.|Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.|Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.|Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;</summary>
- </entry>
- <entry>
-  <title>test</title>
-  <link rel="alternate" type="text/html" href="http://www.magix-cms.dev/fr/actualites/2014/03/14/test/NmjOV6o3JoyHwLSfuCDr/" title="http://www.magix-cms.dev/fr/actualites/2014/03/14/test/NmjOV6o3JoyHwLSfuCDr/"/>
-  <update>2014-03-14T01:19:25+01:00</update>
-  <id>http://www.magix-cms.dev/fr/actualites/2014/03/14/test/NmjOV6o3JoyHwLSfuCDr/</id>
-  <summary type="html">&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.|Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.|Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.|Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
-&lt;p&gt; &lt;/p&gt;</summary>
- </entry>
- <entry>
-  <title>news de test 1</title>
-  <link rel="alternate" type="text/html" href="http://www.magix-cms.dev/fr/actualites/2013/02/01/news-de-test-1/20nUV3U2QtwE4dMt7Cbn/" title="http://www.magix-cms.dev/fr/actualites/2013/02/01/news-de-test-1/20nUV3U2QtwE4dMt7Cbn/"/>
-  <update>2013-02-01T23:00:33+01:00</update>
-  <id>http://www.magix-cms.dev/fr/actualites/2013/02/01/news-de-test-1/20nUV3U2QtwE4dMt7Cbn/</id>
-  <summary type="html">&lt;p&gt;&lt;a title=&quot;page de test&quot; href=&quot;/fr/pages/11-page-de-test/&quot;&gt;page de test&lt;/a&gt;&lt;/p&gt;
-&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p&gt;</summary>
- </entry>
- <entry>
-  <title>Magix CMS sur GitHub</title>
-  <link rel="alternate" type="text/html" href="http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-sur-github/vtSaejymFKeLEhpqvNGN/" title="http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-sur-github/vtSaejymFKeLEhpqvNGN/"/>
-  <update>2012-09-22T14:44:30+02:00</update>
-  <id>http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-sur-github/vtSaejymFKeLEhpqvNGN/</id>
-  <summary type="html">&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p&gt;
-&lt;p&gt;&lt;img src=&quot;/media/gmap_ca4b99e3.png&quot; height=&quot;150&quot; width=&quot;300&quot; /&gt;&lt;/p&gt;
-&lt;p&gt;&lt;/p&gt;</summary>
- </entry>
- <entry>
-  <title>Magix CMS 2.3.6 Disponible</title>
-  <link rel="alternate" type="text/html" href="http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-2-3-6-disponible/mNOLy8BtvE02sJ2pfjEr/" title="http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-2-3-6-disponible/mNOLy8BtvE02sJ2pfjEr/"/>
-  <update>2012-09-22T14:44:18+02:00</update>
-  <id>http://www.magix-cms.dev/fr/actualites/2012/09/22/magix-cms-2-3-6-disponible/mNOLy8BtvE02sJ2pfjEr/</id>
-  <summary type="html">&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p&gt;</summary>
- </entry>
-</feed>
