@@ -8,6 +8,6 @@
  */-->
 <version>
 	<number>2.5.0</number>
-	<phase>Beta</phase>
+	<phase>Stable</phase>
 	<link>http://www.magix-cms.com</link>
 </version>
